@@ -1,3 +1,8 @@
+07 Oct 2003 mipsator
+ * more autoconf compat.
+ * added target for pmkinstall in Makefile.pmk.
+ * updated Makefile.
+
 06 Oct 2003 mipsator
  * finished addition of third license clause.
 
